@@ -1,3 +1,9 @@
+2001-03-15  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	Correct semantics restrictions checking in throw-expression.
+	* except.c (is_admissible_throw_operand): New function.
+	(build_throw): Use it.
+
 2001-03-14  Mark Mitchell  <mark@codesourcery.com>
 
 	* decl.c (cp_make_fnname_decl): Set DECL_IGNORED_P on __FUNCTION__
